--- a/Guia 2 Intro a ASP.NET Parte 2/Ejemplo 1/MvcPelicula/MvcPelicula/Views/Peliculas/Edit.cshtml
+++ b/Guia 2 Intro a ASP.NET Parte 2/Ejemplo 1/MvcPelicula/MvcPelicula/Views/Peliculas/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Editar</h2>
 
 
 @using (Html.BeginForm())
@@ -58,7 +58,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Regresar a la Lista", "Index")
 </div>
 
 @section Scripts {
