--- a/Guia 2 Intro a ASP.NET Parte 2/Ejemplo 1/MvcPelicula/MvcPelicula/Views/Peliculas/Index.cshtml
+++ b/Guia 2 Intro a ASP.NET Parte 2/Ejemplo 1/MvcPelicula/MvcPelicula/Views/Peliculas/Index.cshtml
@@ -8,6 +8,15 @@
 
 <p>
     @Html.ActionLink("Crear Nuevo", "Create")
+    @using (Html.BeginForm("Index","Peliculas",FormMethod.Get))
+    {
+        <p>
+            Genre: @Html.DropDownList("generoPelicula", "All")
+            Titulo: @Html.TextBox("BuscarString")  
+            <br />
+            <input type="submit" value="Filtrar" />
+        </p>
+    }
 </p>
 <table class="table">
     <tr>
